--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,7 +7,9 @@
     "default_popup": "index.html",
     "default_icon": {
       "16": "icons/icon16.png",
-      "32": "icons/icon32.png"
+      "32": "icons/icon32.png",
+      "48": "icons/icon48.ico",
+      "128": "icons/icon128.ico"
     }
   },
   "permissions": [
@@ -40,6 +42,8 @@
   ],
   "icons": {
     "16": "icons/icon16.png",
-    "32": "icons/icon32.png"
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.ico",
+    "128": "icons/icon128.ico"
   }
 }
