--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "word-translate",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vicons/ionicons5": "^0.13.0",
     "axios": "^1.8.4",
     "naive-ui": "^2.41.0",
     "vue": "^3.5.13"
